testing/tests/ui/num-suffix.stderr
error: unknown integer suffix `x`
 --> <source attribute>:1:4
  |
       1 | {{ 0x0x }}
         |    ^ close to this token
         |
 --> tests/ui/num-suffix.rs:4:10
  |
4 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unknown float suffix `f127`
 --> <source attribute>:1:4
  |
       1 | {{ 0.0_f127 }}
         |    ^ close to this token
         |
  --> tests/ui/num-suffix.rs:11:10
   |
11 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unknown number suffix `u321`
 --> <source attribute>:1:4
  |
       1 | {{ 654u321 }}
         |    ^ close to this token
         |
  --> tests/ui/num-suffix.rs:18:10
   |
18 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
